Using plugin resolution strategy for setting plugin version

--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,44 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.7.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'java'
+	id "org.springframework.boot" apply false
+	id "io.spring.dependency-management" apply false
+	id "java"
 }
 
-group = 'com.harishkannarao.springboot'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+group = "com.harishkannarao.springboot"
+version = ""
+sourceCompatibility = "$javaVersion"
 
-configurations {
-	developmentOnly
-	runtimeClasspath {
-		extendsFrom developmentOnly
+allprojects {
+	apply plugin: "java"
+	apply plugin: "org.springframework.boot"
+	apply plugin: "io.spring.dependency-management"
+	
+	configurations {
+		developmentOnly
+		runtimeClasspath {
+			extendsFrom developmentOnly
+		}
+	}
+
+	repositories {
+		mavenCentral()
+	}
+
+	dependencies {
+		implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+		implementation("org.springframework.boot:spring-boot-starter-web")
+		developmentOnly("org.springframework.boot:spring-boot-devtools")
+		testImplementation("org.springframework.boot:spring-boot-starter-test") {
+			exclude group: "org.junit.vintage", module: "junit-vintage-engine"
+		}
+	}
+
+	test {
+		useJUnitPlatform()
+
+		systemProperties = System.properties.stringPropertyNames().collectEntries {
+			[(it): System.getProperty(it)]
+		}
 	}
 }
 
-repositories {
-	mavenCentral()
-}
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-}
-
-test {
-	useJUnitPlatform()
-}
