--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,14 @@
-rootProject.name = 'gradle-demo'
+pluginManagement {
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == "org.springframework.boot") {
+                useVersion springBootVersion as String
+            }
+            if (requested.id.id == "io.spring.dependency-management") {
+                useVersion springBootDependencyVersion as String
+            }
+        }
+    }
+}
+
+rootProject.name = 'gradle-spring-boot'
