--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 javaVersion=11
 springBootVersion=2.2.7.RELEASE
 springBootDependencyVersion=1.0.9.RELEASE
+restAssuredVersion=3.1.1
+restAssuredCurlLoggerVersion=1.0.4
+logbackVersion=1.2.1
