Feature Toggle integration tests

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ pluginManagement {
 rootProject.name = 'gradle-spring-boot'
 
 include ":application"
-include ":integration-test"
+include ":integration-test-feature-toggle"
