Disabling regular jar for the application

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -3,17 +3,16 @@ apply plugin: "io.spring.dependency-management"
 
 bootJar {
 	enabled(true)
-	classifier("executable")
+	classifier("")
 }
 
 jar {
-	enabled(true)
+	enabled(false)
 }
 
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
 	implementation("org.springframework.boot:spring-boot-starter-web")
-//	developmentOnly("org.springframework.boot:spring-boot-devtools")
 
 	testImplementation("org.springframework.boot:spring-boot-starter-test") {
 		exclude group: "org.junit.vintage", module: "junit-vintage-engine"
