--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ pluginManagement {
 rootProject.name = 'gradle-spring-boot'
 
 include ":application"
+include ":test-common"
 include ":integration-test-feature-toggle"
