--- a/application/build.gradle
+++ b/application/build.gradle
@@ -11,9 +11,14 @@ jar {
 }
 
 dependencies {
+	// application dependencies
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
 	implementation("org.springframework.boot:spring-boot-starter-web")
 
+	// project test dependencies
+	testImplementation(project(":test-common").sourceSets.test.output)
+
+	// external test dependencies
 	testImplementation("org.springframework.boot:spring-boot-starter-test") {
 		exclude group: "org.junit.vintage", module: "junit-vintage-engine"
 	}
