Adding qa acceptance test module and task

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ include ":application"
 include ":test-common"
 include ":integration-test"
 include ":integration-test-feature-toggle"
+include ":qa-acceptance-test"
