--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ springBootDependencyVersion=1.0.9.RELEASE
 restAssuredVersion=3.1.1
 restAssuredCurlLoggerVersion=1.0.4
 logbackVersion=1.2.1
+junit5Version=5.4.2
+hamcrestVersion=2.1
