--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -4,3 +4,7 @@ server:
 spring:
   profiles:
     active: "local"
+
+logging:
+  pattern:
+    console: '%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %wEx %n'
