--- a/test-common/build.gradle
+++ b/test-common/build.gradle
@@ -6,4 +6,8 @@ dependencies {
     testImplementation("io.rest-assured:rest-assured:$restAssuredVersion") {
         exclude group: "com.sun.xml.bind", module: "jaxb-osgi"
     }
+    testImplementation("com.github.dzieciou.testing:curl-logger:$restAssuredCurlLoggerVersion") {
+        exclude module: 'slf4j-api'
+    }
+    testImplementation("ch.qos.logback:logback-classic:$logbackVersion")
 }
