--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ restAssuredVersion=3.1.1
 restAssuredCurlLoggerVersion=1.0.4
 logbackVersion=1.2.1
 logbackAccessVersion=2.7.1
+slf4jVersion=1.7.30
 junit5Version=5.4.2
 hamcrestVersion=2.1
 springDocVersion=1.3.4
