--- a/integration-test-feature-toggle/build.gradle
+++ b/integration-test-feature-toggle/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     testImplementation("io.rest-assured:rest-assured:$restAssuredVersion") {
         exclude group: "com.sun.xml.bind", module: "jaxb-osgi"
     }
-    testImplementation("com.github.dzieciou.testing:curl-logger:$restAssuredCurlLoggerVersion")
+    testImplementation("com.github.dzieciou.testing:curl-logger:$restAssuredCurlLoggerVersion") {
+        exclude module: 'slf4j-api'
+    }
     testImplementation("ch.qos.logback:logback-classic:$logbackVersion")
 }
