--- a/integration-test-feature-toggle/build.gradle
+++ b/integration-test-feature-toggle/build.gradle
@@ -1,23 +1,8 @@
-apply plugin: "org.springframework.boot"
-apply plugin: "io.spring.dependency-management"
-
-bootJar {
-    enabled(false)
-}
-
-jar {
-    enabled(true)
-}
-
-bootRun {
-    enabled(false)
-}
-
 dependencies {
     // dependencies needed to start Spring Boot application
     testImplementation(project(":application").sourceSets.main.output)
-    testImplementation("org.springframework.boot:spring-boot-starter-thymeleaf")
-    testImplementation("org.springframework.boot:spring-boot-starter-web")
+    testImplementation("org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVersion")
+    testImplementation("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
     testImplementation("net.rakugakibox.spring.boot:logback-access-spring-boot-starter:$logbackAccessVersion")
     testImplementation("org.springdoc:springdoc-openapi-ui:$springDocVersion")
 
@@ -25,7 +10,7 @@ dependencies {
     testImplementation(project(":test-common").sourceSets.test.output)
 
     // external test dependencies
-    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+    testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion") {
         exclude group: "org.junit.vintage", module: "junit-vintage-engine"
     }
     testImplementation("io.rest-assured:rest-assured:$restAssuredVersion") {
