Using immutable library with example

--- a/integration-test-feature-toggle/build.gradle
+++ b/integration-test-feature-toggle/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion") {
         exclude group: "org.junit.vintage", module: "junit-vintage-engine"
     }
+    testCompileOnly("org.immutables:value:$immutablesVersion")
+    testAnnotationProcessor("org.immutables:value:$immutablesVersion")
     testImplementation("io.rest-assured:rest-assured:$restAssuredVersion") {
         exclude group: "com.sun.xml.bind", module: "jaxb-osgi"
     }
