--- a/application/build.gradle
+++ b/application/build.gradle
@@ -11,6 +11,8 @@ jar {
 
 dependencies {
 	// application dependencies
+	compileOnly("org.immutables:value:$immutablesVersion")
+	annotationProcessor("org.immutables:value:$immutablesVersion")
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVersion")
 	implementation("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
 	implementation("net.rakugakibox.spring.boot:logback-access-spring-boot-starter:$logbackAccessVersion")
@@ -23,4 +25,6 @@ dependencies {
 	testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion") {
 		exclude group: "org.junit.vintage", module: "junit-vintage-engine"
 	}
+	testCompileOnly("org.immutables:value:$immutablesVersion")
+	testAnnotationProcessor("org.immutables:value:$immutablesVersion")
 }
