--- a/test-common/build.gradle
+++ b/test-common/build.gradle
@@ -3,6 +3,10 @@ test.enabled = false
 dependencies {
     testImplementation(project(":application").sourceSets.main.output)
 
+    testImplementation("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
+
+    testCompileOnly("org.immutables:value:$immutablesVersion")
+    testAnnotationProcessor("org.immutables:value:$immutablesVersion")
     testImplementation("io.rest-assured:rest-assured:$restAssuredVersion") {
         exclude group: "com.sun.xml.bind", module: "jaxb-osgi"
     }
