--- a/application/build.gradle
+++ b/application/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 	annotationProcessor("org.immutables:value:$immutablesVersion")
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVersion")
 	implementation("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
+	implementation("org.springframework.boot:spring-boot-starter-validation:$springBootVersion")
 	implementation("net.rakugakibox.spring.boot:logback-access-spring-boot-starter:$logbackAccessVersion")
 	implementation("org.springdoc:springdoc-openapi-ui:$springDocVersion")
 
