--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -14,6 +14,17 @@ springdoc:
   swagger-ui:
     path: "/swagger-ui.html"
 
+management:
+  endpoints:
+    web:
+      base-path: "/"
+    enabled-by-default: false
+  endpoint:
+    info:
+      enabled: true
+      git:
+        mode: "full"
+
 logging:
   pattern:
     console: '%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %wEx %n'
