--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 javaVersion=11
 springBootVersion=2.2.7.RELEASE
+gradleGitProperties=2.2.2
 restAssuredVersion=3.1.1
 restAssuredCurlLoggerVersion=1.0.4
 logbackVersion=1.2.1
