--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -18,6 +18,8 @@ management:
   endpoints:
     web:
       base-path: "/"
+      exposure:
+        include: health,info
     enabled-by-default: false
   endpoint:
     info:
