--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-javaVersion=11
-springBootVersion=2.2.7.RELEASE
-gradleGitProperties=2.2.2
+javaVersion=17
+springBootVersion=2.7.7
+gradleGitProperties=2.4.1
 restAssuredVersion=3.1.1
 restAssuredCurlLoggerVersion=1.0.4
 logbackVersion=1.2.1
@@ -8,5 +8,5 @@ logbackAccessVersion=2.7.1
 slf4jVersion=1.7.30
 junit5Version=5.4.2
 hamcrestVersion=2.1
-springDocVersion=1.3.4
-immutablesVersion=2.8.2
+springDocVersion=1.6.14
+immutablesVersion=2.9.2
