--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = "com.harishkannarao.springboot"
 version = ""
 java.sourceCompatibility = JavaVersion.toVersion("$javaVersion")
+java.targetCompatibility = JavaVersion.toVersion("$javaVersion")
 
 allprojects {
 	apply plugin: "java"
